<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="to">To</string>
    <string name="opac">OPAC</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_result">List Of Books</string>
    <string name="title_activity_full">Complete Details</string>
    <string name="medium">Medium Text</string>
    <string name="id">Id: </string>
    <string name="title">Title: </string>
    <string name="author">Author: </string>
    <string name="year">Year: </string>
    <string name="publisher">Publisher: </string>
    <string name="copies">No. of Copies: </string>
    <string name="details">Full Details</string>
    <string name="male">Male</string>
    <string name="app_name">M-OPAC</string>
    <string name="database">Library Book DataBase</string>
    <string name="submit">Submit</string>
    <string name="showall">SearchByAuthor</string>
    <string name="AutoSuggest">BookName/AuthorName</string>
    <string name="email">Email</string>
    <string name="secondname">SecondName</string>
    <string name="contactno">ContactNo</string>
    <string name="title_activity_data_base_helper">DataBaseHelper</string>
    <string name="title_activity_display">Welcome To M-OPAC</string>
    <string name="bookid">Author: </string>
    <string name="bookname">BookName :</string>
    <string name="shelf">Shelf: </string>
    <string name="result">Result</string>
    <string name="typeheretosearchdatabase">TypeHereToSearchDatabase</string>
    <string name="lbd">Library Book DataBase</string>
    <string name="DoB">Complete Detail of Book</string>
    <string name="nameofauthor">NameOfAuthor :</string>
    <string name="shelf_no_">Shelf No. :</string>
    <string name="book_id">Book Id :</string>
    <string name="no_of_copies">No. of Copies: </string>
    <string name="search">Search</string>
    <string name="splash">Splash</string>
    <string name="title_activity_splash">Splash</string>

</resources>
